fixes #16, adds functionality to collapse the similar items in activity list.

--- a/stylesheets/bsafes.css
+++ b/stylesheets/bsafes.css
@@ -850,3 +850,6 @@ body {
 /* End of comments */
 /* End of page *******/
 
+.up-arrow, .down-arrow {
+  cursor: pointer;
+}
